# rasputin-memory

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  WORK-ORDER.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  quickstart.sh  requirements-core.txt  requirements-ml.txt  requirements.txt
.github/: pull_request_template.md
.sisyphus/: AUDIT-FINDINGS-2026-04-25.md  PROJECT-WINDDOWN.md  ablation-A-runtime-anomaly.md  ablation-C-prep.md  ablation-D-prep.md  s1-FINAL.md  s2-ablation-A-complete.md  s2-ablation-C-success.md  s2-ablation-verdict-fourlane-culprit.md  single-hop-regression-corpus.json
audits/: 00-master-architecture-review.md  01-retrieval-pipeline.md  02-ingestion-pipeline.md  03-maintenance-lifecycle.md  04-graph-knowledge.md  05-tests-benchmarks.md  06-infrastructure-api.md  MEGA-REPORT-SUMMARY.md  MEGA-REPORT.md  opus-01-retrieval-crossexam.md  opus-02-ingestion-crossexam.md  opus-03-maintenance-crossexam.md  opus-04-graph-crossexam.md  opus-05-tests-crossexam.md  opus-06-infrastructure-crossexam.md
benchmarks/: ABLATION.md  COMPARISON.md  README.md  REGRESSION_THRESHOLDS.json  RESULTS.md  amac_shootout.py  amac_shootout_results.jsonl  amac_shootout_summary.json  amac_shootout_v2.py  analyze_failures.py  batch_api.py  bench_runner.py  bm25_sidecar.py  compare_runs.py  frames_bench.py  full_pipeline_bench.py  full_pipeline_bench_qwen3.py  ground_truth.jsonl  ingest_cache.py  launch_constraints.sh  locomo_bench.py  locomo_benchmark.py  locomo_benchmark_qwen3embed.py  locomo_benchmark_v2.py  locomo_leaderboard_bench.py  locomo_plus_bench.py  longmemeval_bench.py  monitor_progress.py  precompute_consolidation.py  precompute_links.py  run_ablation.py  run_beir.py  run_benchmark.py  run_ce_ab_test.sh  run_full.sh  run_phase1.sh  run_phase2.sh
brainbox/: __init__.py  brainbox.py
config/: known_entities.json  rasputin.toml
docs/: AGENT-INTEGRATION.md  ARCHITECTURE.md  BACKLOG.md  CLAUDE-CODE.md  CLOUD_PROVIDERS.md  CONFIGURATION.md  CRON_JOBS.md  EMBEDDINGS.md  ENRICHMENT.md  GETTING_STARTED.md  HYBRID-BRAIN.md  INTEGRATIONS.md  MEMORY-LIFECYCLE.md  OPENCLAW-INTEGRATION.md  OPERATIONS.md  PHASE4-SKIP-NOTES.md  QUALITY-GATES.md  SETUP.md  TROUBLESHOOTING.md
experiments/: 2026-04-05_ablation_dense_only.md  2026-04-05_cohere_reranker_check.md  2026-04-05_embedding_qwen3_vs_nomic.md  2026-04-05_phase0_cross_encoder.md  2026-04-05_prompt_adversarial_fix.md  2026-04-05_qwen3_4096d.md  2026-04-06_chunking_strategies.md  2026-04-06_top10_cross_encoder.md  2026-04-06_twolane_fact_cap.md  2026-04-07_threelane_bm25.md  2026-04-07_twolane_no_crossencoder.md  2026-04-07_twolane_ratio_tune.md  2026-04-07_twolane_search.md  2026-04-08_full10_validation.md  2026-04-08_phase1_prompt_routing.md  2026-04-09_phase2_consolidation_observations.md  2026-04-11_multihop_retrieval_analysis.md  2026-04-14_wider_retrieval_pool.md  ablation-dense-only.md
fixtures/: memory_qa.jsonl
graph-brain/: README.md  SPEC.md  graph_api.py  graph_query.py  migrate_to_graph.py  schema.py
honcho/: README.md  honcho-query.sh  sync-honcho-context.sh  test-honcho-integration.py  (+1 more)
(+231 files in other folders)
