[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rasputin-memory"
version = "2.0.0"
description = "Production-grade long-term memory architecture for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "qdrant-client>=1.9.0",
    "redis>=5.0.0",
    "FalkorDB>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
reranker = ["fastapi>=0.110.0", "uvicorn>=0.29.0", "transformers>=4.40.0", "torch>=2.0.0"]
storm = ["knowledge-storm>=0.2.0", "dspy-ai>=2.4.0"]
mcp = ["mcp>=1.0.0"]
dev = ["ruff>=0.3.0", "pytest>=8.0.0"]
all = ["rasputin-memory[reranker,storm,mcp,dev]"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tools --cov-report=term-missing"

[tool.coverage.run]
source = ["tools"]
omit = [
    "tools/memory_autogen.py",
    "tools/embed_server_gpu1.py",
    "tools/memory_consolidator_v4.py",
    "tools/memory_dedup.py",
    "tools/memory_health_check.py",
    "tools/memory_mcp_server.py",
    "tools/reranker_server.py",
    "tools/fact_extractor.py",
    "tools/consolidate_second_brain.py",
    "tools/enrich_second_brain.py",
    "tools/migrate_graph_edges.py",
]

[tool.coverage.report]
fail_under = 40

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = false
