[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rasputin-memory"
version = "0.7.0"
description = "Production-grade long-term memory architecture for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "qdrant-client>=1.9.0",
    "redis>=5.0.0",
    "FalkorDB>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/jcartu/rasputin-memory"
Documentation = "https://github.com/jcartu/rasputin-memory#readme"
Repository = "https://github.com/jcartu/rasputin-memory"
Changelog = "https://github.com/jcartu/rasputin-memory/blob/main/CHANGELOG.md"

[project.optional-dependencies]
reranker = ["fastapi>=0.110.0", "uvicorn>=0.29.0", "transformers>=4.40.0", "torch>=2.0.0"]
storm = ["knowledge-storm>=0.2.0", "dspy-ai>=2.4.0"]
mcp = ["mcp>=1.0.0"]
dev = ["ruff>=0.3.0", "pytest>=8.0.0"]
all = ["rasputin-memory[reranker,storm,mcp,dev]"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tools --cov-report=term-missing"

[tool.coverage.run]
source = ["tools"]
omit = [
    "tools/brain/reranker.py",
]

[tool.coverage.report]
fail_under = 55

[tool.setuptools]
packages = ["brain", "pipeline"]
package-dir = {"" = "tools"}

[tool.setuptools.package-data]
brain = ["py.typed"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = false
